# asm-book

./: .gitignore  CMakeLists.txt
chapter07/: loop.asm
chapter08/: memory.asm
chapter09/: icalc.asm
chapter10/: stack.asm
chapter11/: fcalc.asm
chapter15/: function5.asm
chapter16/: bitops.asm  printb.asm
chapter19/: read-console.asm
chapter20/: file.asm
chapter21/: cmdline.asm
chapter24/: strings.asm
chapter25/: cpuid-sse.asm  sse-book.asm
chapter28/: vectors.asm
cmake/: AddExercise.cmake
common-lib/: CMakeLists.txt  cpuid.asm  file-io.asm  memory.asm  print.asm  version.asm
hello-world/: hello.asm
jump/: jump.asm
